(This file, NEWS, lists new features and enhancements. See CHANGES for fixes.)

unreleased

  * Macros: They now work across multiple documents. You can cancel macro
    recording, and append new recorded commands to your current macro.

  * Saving of read-only documents requires confirmation.

  * Word completion now does not consider the word the cursor is currently
    in, which helps in disambiguating.

  * The option -h is now an alias for --help. Thanks to Lonnie Abelbeck for
    implementing this feature.

  * Add asterisk.jsf syntax.

  * FIND in string inputs brings up a requester with your input history.
    Use Enter to replace, TAB to insert into your input line; Escape to exit.

  * Enhanced commands: MoveEOW, NextWord, and PrevWord can now move to either
    end of the indicated word via optional '<' and '>' parameter modifiers.

3.1.2 2018-10-06

  * RepeatLast now accepts "Find" or "Replace" after its optional number so
    you can explicitly repeat either operation even if the other was most
    recently performed.

  * We now use the xenl property to detect whether we can write on the last
    column of the last line, thus making the status bar complete.

3.1.1 2017-06-04

  * You can now CloseDoc (^Q) unmodified documents from within the
    SelectDoc (F4) requester.

3.1.0 2017-04-29

  * Large files that do not fit into memory are memory-mapped transparently
    if enough disk space is available.

  * Determine a "virtual extension" based on document contents and patterns
    from ~/.ne/.extensions. Allows overrides of specified extensions only.
    If no match, use .default#ap prefs.

  * Status flag "!" indicates the last line of document is not empty, thus
    the last line of the resulting saved file will not be terminated.

  * Requesters by default no longer remove non-matching entries as you
    enter characters. Use Insert or Delete keys within a requester
    to toggle between these behaviors.
